--- a/TowerAttack/Base.lproj/Main.storyboard
+++ b/TowerAttack/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqA-sC-WJB">
-                                <rect key="frame" x="428" y="252" width="126" height="56"/>
+                                <rect key="frame" x="428" y="248" width="126" height="30"/>
                                 <color key="backgroundColor" red="0.41498056948939932" green="0.16857831126842937" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Upgrade: 20 gold">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -84,6 +84,13 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hT3-gz-ha7">
+                                <rect key="frame" x="428" y="281" width="126" height="30"/>
+                                <color key="backgroundColor" red="0.41498056950000001" green="0.16857831130000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Upgrade: 20 gold">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
