--- a/TowerAttack/Base.lproj/Main.storyboard
+++ b/TowerAttack/Base.lproj/Main.storyboard
@@ -1,9 +1,52 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6185.7" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="LVB-YS-i5n">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6181.2"/>
     </dependencies>
     <scenes>
+        <!--Area Select View Controller-->
+        <scene sceneID="fg9-DY-NRD">
+            <objects>
+                <viewController id="0mx-5k-3zz" customClass="TAAreaSelectViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oJD-sW-HcR"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ov7-uM-m7P"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="72B-Tu-q5e">
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="279" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pmb-9L-pJb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="568" id="RQz-pc-hJl"/>
+                                    <constraint firstAttribute="width" constant="320" id="WwN-jp-coV"/>
+                                </constraints>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="0mx-5k-3zz" id="moy-E9-X5u"/>
+                                    <outlet property="delegate" destination="0mx-5k-3zz" id="4fL-Xg-l83"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="tableView" destination="pmb-9L-pJb" id="Pch-oI-OQ3"/>
+                        <outlet property="tableViewHeight" destination="RQz-pc-hJl" id="bxh-OC-dyE"/>
+                        <outlet property="tableViewWidth" destination="WwN-jp-coV" id="vHx-cO-6r7"/>
+                        <segue destination="HAe-h3-8G6" kind="unwind" identifier="Unwind" unwindAction="unwindToMainScreenFromSegue:" id="JdM-dp-5SN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W4B-BL-8ja" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="HAe-h3-8G6" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="139" y="-334"/>
+        </scene>
         <!--Main Menu View Controller-->
         <scene sceneID="CtS-rA-C9T">
             <objects>
@@ -26,7 +69,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="startGame:" destination="LVB-YS-i5n" eventType="touchUpInside" id="zB0-55-534"/>
+                                    <segue destination="0mx-5k-3zz" kind="modal" modalTransitionStyle="crossDissolve" id="hjh-xF-91f"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PXB-sx-diw" customClass="TAButton">
@@ -90,10 +133,10 @@
             </objects>
             <point key="canvasLocation" x="139" y="141"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="psh-14-EUe">
             <objects>
-                <viewController id="kq4-95-1Cd" sceneMemberID="viewController">
+                <viewController id="kq4-95-1Cd" customClass="TASettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cPK-tk-fZm"/>
                         <viewControllerLayoutGuide type="bottom" id="cD5-7O-mhG"/>
